--- a/src/Components/Contact/ContatcStyle.module.css
+++ b/src/Components/Contact/ContatcStyle.module.css
@@ -1,5 +1,5 @@
 .container{
-    width:500px;
+    width:700px;
     display: flex;
     justify-content:space-between;
     align-items:center;
@@ -8,4 +8,25 @@
     border-radius:5px;
     background-color:white;
     padding: 10px 20px;
+}
+.options{
+    width:100px;
+    display: flex;
+    justify-content:space-evenly;
+}
+.editBtn{
+    padding:3px 5px;
+    border-radius: 5px;
+    color:white;
+    background-color:#059cd9;
+    border:1px solid  #059cd9;
+    cursor: pointer;
+}
+.deleteBtn{
+    padding:3px 5px;
+    border-radius: 5px;
+    background-color:white;
+    color:red;
+    border:1px solid red;
+    cursor: pointer;
 }
