--- a/src/Components/AddContact/AddContactStyle.module.css
+++ b/src/Components/AddContact/AddContactStyle.module.css
@@ -5,6 +5,9 @@
     justify-content: flex-start;
     align-items: flex-start;
     margin: 10px auto;
+    padding:10px 20px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
 }
 .container{
     text-align: center;
@@ -24,6 +27,7 @@ input{
     background-color: #059cd9;
     border: 1px solid #059cd9;
     margin-top: 5px;
+    cursor: pointer;
 }
 .formControl{
     display:flex;
