--- a/src/Components/AddContact/AddContactStyle.module.css
+++ b/src/Components/AddContact/AddContactStyle.module.css
@@ -42,3 +42,8 @@ input{
     justify-content: center;
     align-items: center;
 }
+@media screen and (max-width: 400px) {
+    .form{
+        width: 95%;
+    }
+}
