--- a/src/Components/EditContact/EditContact.module.css
+++ b/src/Components/EditContact/EditContact.module.css
@@ -15,3 +15,8 @@ button{
     display:flex;
     align-items: center;
 }
+@media screen and (max-width: 400px) {
+    .container{
+        width: 95%;
+    }
+}
